--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: nodeserver
-        image: thetips4you/nodeapp:latest
+        image: aalsaid/nodeapp:latest
         ports:
         - containerPort: 3000
         
