--- a/ansible.yml
+++ b/ansible.yml
@@ -2,7 +2,14 @@
 - name: Apply deployment File
   hosts: 'all'
   tasks:
+    - name: "Move ./deploymentservice.yml to /home/aalsaid/ansible"
+      template:
+        src: "deploymentservice.yml"
+        dest: "/home/aalsaid/ansible"
+        owner: "aalsaid"
+        group: "aalsaid"
+        mode: "0644"
     - name: apply file
-      command: "kubectl apply -f deploymentservice.yml -n test"
+      command: "kubectl apply -f /home/aalsaid/ansible/deploymentservice.yml -n test"
     - name: rollout
       command: "kubectl -n test rollout restart deployment nodeapp-deployment"
